style(scroll-top): fix visibility issue

--- a/modules/scroll-top/src/css/_scroll-top.core.scss
+++ b/modules/scroll-top/src/css/_scroll-top.core.scss
@@ -17,10 +17,12 @@ $scrollTop-gutter: 20px !default;
   text-decoration: none;
   white-space: nowrap;
   cursor: pointer;
+  visibility: hidden;
   outline: none;
   opacity: 0;
 
   &-show {
+    visibility: visible;
     opacity: 1;
   }
 
